--- a/src/components/TopHeader/TopHeader.module.css
+++ b/src/components/TopHeader/TopHeader.module.css
@@ -8,8 +8,11 @@
     background-color: var(--primary-color);
     max-width: var(--max-width);
     font-size: 2rem;
+    align-items: center;
 }
-
+.headerContainer img {
+    width: 8rem;
+}
 @media  (min-width: 980px) and (max-width: 1440px)  {
     .headerContainer{
         font-size: 1.5rem;
