--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -29,6 +29,10 @@
   --max-width: 1920px
 }
 
+
+@theme{
+  --color-second-color: var(--second-color); 
+}
 @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
@@ -300,4 +304,47 @@ header{
   37.5% {
     transform: translate(0, 25%);
   }
+}
+
+.content-container {
+  display: flex;
+}
+.content-container > * {
+  width: 50%;
+}
+
+.right-content {
+  padding-right: 15px;
+}
+
+.left-content {
+  height: 100vh;
+  position: relative;
+}
+
+.left-content > * {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  opacity: 0;
+  visibility: hidden;
+}
+
+@media screen and (max-width: 800px) {
+  .left-content {
+    display: none;
+  }
+  .right-content {
+    padding-left: 15px;
+  }
+}
+
+.header-section {
+  text-align: center;
+  padding: 1rem 6rem;
+}
+
+.gsap-logo {
+  left: 1rem;
+  right: unset;
 }
