--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,14 +7,14 @@
   url("https://candyfonts.com/wp-data/2018/10/26/11538/HELR45W.ttf") format("opentype"),
   url("https://candyfonts.com/wp-data/2018/10/26/11538/HELR45W.ttf") format("truetype");
 } 
-*/
+
 @font-face {
   font-family: 'eleanor';
   src: url('http://www.thetimothylee.com/fonts/eleanor/Eleanor.ttf') format('ttf');
   font-weight: 400;
   font-style: normal;
 }
-
+*/
 
 :root {
   --primary-color: #B2DBE2;
@@ -44,13 +44,13 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
-  font-family:  Helvetica, sans-serif;
+  font-family: var(--font-helvetica), sans-serif;
 }
 
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family:  Helvetica, sans-serif;
+  font-family:  var(--font-helvetica), sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
