--- a/src/components/ScrollTrigger/ScrollTrigger.module.css
+++ b/src/components/ScrollTrigger/ScrollTrigger.module.css
@@ -32,11 +32,10 @@
 
 .rightContent img{
     display: none;
-    transform: rotate(5deg);
 }
 
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 700px) {
     .leftContent {
         display: none;
     }
@@ -44,6 +43,11 @@
     .rightContent {
         padding-left: 15px;
         width: 100vw;
+    }
+
+    .rightContent>div {
+        width: 90%;
+        margin: auto;
     }
 
     .rightContent img{
@@ -55,7 +59,8 @@
         align-self: center;
         width: 80vw;
         display: block;
-        margin-left: 7vw;
+        box-shadow: 10px 5px 5px grey;
+        transform: rotate(5deg);
 
     }
 
