--- a/src/components/HeaderMenu/MenuItem/MenuItem.module.css
+++ b/src/components/HeaderMenu/MenuItem/MenuItem.module.css
@@ -1,4 +1,4 @@
-
+/* 
 .menu a{
     text-decoration: none;
     font-family:  var(--font-helvetica);
@@ -8,4 +8,4 @@
     text-decoration: underline;
     color: #7B7B7B;
 }
-
+ */
