--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -8,6 +8,9 @@
     justify-content: space-between;
     flex-wrap: nowrap;
     align-items: center;
+    
+    align-content: center;
+    text-align: center;
 }
 
 .copyright{
