--- a/src/components/Menu/menu.css
+++ b/src/components/Menu/menu.css
@@ -37,6 +37,7 @@
   z-index: 2;
   display: flex;
   clip-path: polygon(0% 0%, 100% 0%, 100% 0%, 0% 0%);
+  transition: clip-path 0.3s ease-in-out;
 }
 
 .menu-close-icon {
